# lightwave-sys

./: Augusta.entitlements  Cargo.toml  com.lightwave.augusta.plist
.claude/projects/-Users-joelschaeffer-dev-lightwave-media-packages-lightwave-sys/memory/: project_cli_failures.md
.github/workflows/: checks-on-pr.yml
config/roles/: crew.toml  deacon.toml  dog.toml  mayor.toml  polecat.toml  refinery.toml  witness.toml
crates/lightwave-macos/: Cargo.toml
crates/lightwave-macos/src/: accessibility.rs  app.rs  applescript.rs  clipboard.rs  fsevents.rs  input.rs  keychain.rs  lib.rs  permission.rs  screen.rs  spotlight.rs  system.rs  types.rs  window.rs
scripts/: bootstrap.sh
src/: hooks.rs  lib.rs  main.rs  skills.rs
src/agent/: agent.rs  loop_.rs  prompt.rs
src/channels/: claude_sdk.rs  imessage.rs  mod.rs  orchestrator.rs
src/config/: agents.rs  mod.rs  roles.rs  schema.rs
src/createos/: cli.rs  connector.rs  mod.rs  models.rs
src/daemon/: mod.rs
src/gateway/: api.rs  mod.rs
src/health/: mod.rs  monitor.rs
src/observability/: mod.rs
src/providers/: anthropic.rs
src/tools/: mod.rs  web_search.rs
src/tui/: event_bus.rs  feed.rs  mod.rs  tui_render.rs
tests/system/: binary_smoke.rs  daemon_ipc.rs  mod.rs
