[package]
name = "lightwave-macos"
version = "0.1.0"
edition = "2021"
authors = ["LightWave Media"]
description = "macOS desktop automation tools for LightWave Augusta"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
enigo = { version = "0.2", features = ["serde"] }
xcap = "0.9"
# Phase 3: Deep macOS integration
security-framework = "3.0"    # Keychain access
fsevent = "2.0"               # FSEvents file watching
